--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-  <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
       integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary py-3 fixed-top">
       <div class="container-fluid">
-        <img src=" " alt="">
+        <img src="assets/img/Group 1.svg" alt="" />
         <button
           class="navbar-toggler"
           type="button"
@@ -34,7 +40,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div
+          class="collapse navbar-collapse nav-buttons"
+          id="navbarSupportedContent"
+        >
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="#">Главная</a>
@@ -45,7 +54,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">О нас</a>
+              <a class="nav-link" href="#">Бренд</a>
             </li>
 
             <li class="nav-item">
@@ -53,14 +62,23 @@
             </li>
 
             <li class="nav-item">
-              <i class="fa-solid fa-bag-shopping" style="color: #000000"></i>
-              <i class="fa-solid fa-user" style="color: #000000"></i>
-            </li> 
+              <i class="fa-solid fa-bag-shopping"></i>
+              <i class="fa-solid fa-user"></i>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
 
+
+    <section id="home">
+      <div class="">
+        <h5>Новое поступление</h5>
+        <h1>Органическая вечность</h1>
+        <p>Органическая вечность - качество навсегда</p>
+        <button>Смотреть</button>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
