two six october

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary py-3 fixed-top">
-      <div class="container-fluid">
+      <div class="container">
         <img src="assets/img/Group 1.svg" alt="" />
         <button
           class="navbar-toggler"
@@ -45,10 +45,7 @@
           id="navbarSupportedContent"
         >
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Главная</a>
-            </li>
-
+            
             <li class="nav-item">
               <a class="nav-link" href="#">Каталог</a>
             </li>
@@ -72,11 +69,20 @@
 
 
     <section id="home">
-      <div class="">
-        <h5>Новое поступление</h5>
-        <h1>Органическая вечность</h1>
-        <p>Органическая вечность - качество навсегда</p>
+      <div class="container">
+        <h5>На всю жизнь</h5>
+        <h1><span>Органическая</span> вечность</h1>
+        <p>Качество навсегда</p>
         <button>Смотреть</button>
+      </div>
+    </section>
+<br>
+    <section id="brand" class="container">
+      <div class="row g-6 gy-4">
+        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="/assets/img/Design_uden_navn-38.jpg.webp" alt="">
+        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="/assets/img/Design_uden_navn-39.jpg.webp" alt="">
+        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="/assets/img/1_06c6290b-89fd-4e90-bcca-c2c8dfb9b0fb.jpg.webp" alt="">
+        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="/assets/img/2_72426d31-2d1a-4082-94ca-8047d1110f84.jpg.webp" alt="">
       </div>
     </section>
     <script
