--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>invvi</title>
-    <link rel="shortcut icon" href="/assets/img/Group 1.svg" />
+    <link rel="shortcut icon" href="./assets/img/Group 1.svg" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -25,12 +25,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary py-3 fixed-top">
       <div class="container">
-        <img src="assets/img/Group 1.svg" alt="" />
+        <img src="./assets/img/Group 1.svg" alt="" />
         <button
           class="navbar-toggler"
           type="button"
@@ -81,10 +81,10 @@
 <br>
     <section id="brand" class="container">
       <div class="row g-6 gy-4">
-        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="/assets/img/Design_uden_navn-38.jpg.webp" alt="">
-        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="/assets/img/Design_uden_navn-39.jpg.webp" alt="">
-        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="/assets/img/1_06c6290b-89fd-4e90-bcca-c2c8dfb9b0fb.jpg.webp" alt="">
-        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="/assets/img/2_72426d31-2d1a-4082-94ca-8047d1110f84.jpg.webp" alt="">
+        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-38.jpg.webp" alt="">
+        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-39.jpg.webp" alt="">
+        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/1_06c6290b-89fd-4e90-bcca-c2c8dfb9b0fb.jpg.webp" alt="">
+        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/2_72426d31-2d1a-4082-94ca-8047d1110f84.jpg.webp" alt="">
       </div>
     </section>
     <script
