--- a/index.html
+++ b/index.html
@@ -1,100 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>invvi</title>
-    <link rel="shortcut icon" href="./assets/img/Group 1.svg" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary py-3 fixed-top">
-      <div class="container">
-        <img src="./assets/img/Group 1.svg" alt="" />
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse nav-buttons"
-          id="navbarSupportedContent"
-        >
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            
-            <li class="nav-item">
-              <a class="nav-link" href="#">Каталог</a>
-            </li>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>invvi - Органическая одежда</title>
+  <link rel="shortcut icon" href="./assets/img/Group 1.svg" />
 
-            <li class="nav-item">
-              <a class="nav-link" href="#">Бренд</a>
-            </li>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
 
-            <li class="nav-item">
-              <a class="nav-link" href="#">Контакты </a>
-            </li>
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary py-3 fixed-top">
+    <div class="container">
+      <img src="./assets/img/Group 1.svg" alt="" />
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse nav-buttons" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-            <li class="nav-item">
-              <i class="fa-solid fa-bag-shopping"></i>
-              <i class="fa-solid fa-user"></i>
-            </li>
-          </ul>
-        </div>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Каталог</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Бренд</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Контакты </a>
+          </li>
+
+          <li class="nav-item">
+            <i class="fa-solid fa-bag-shopping"></i>
+            <i class="fa-solid fa-user"></i>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
 
-    <section id="home">
-      <div class="container">
-        <h5>На всю жизнь</h5>
-        <h1><span>Органическая</span> вечность</h1>
-        <p>Качество навсегда</p>
-        <button>Смотреть</button>
-      </div>
-    </section>
-<br>
-    <section id="brand" class="container">
-      <div class="row g-6 gy-4">
-        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-38.jpg.webp" alt="">
-        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-39.jpg.webp" alt="">
-        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/1_06c6290b-89fd-4e90-bcca-c2c8dfb9b0fb.jpg.webp" alt="">
-        <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/2_72426d31-2d1a-4082-94ca-8047d1110f84.jpg.webp" alt="">
-      </div>
-    </section>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/34a4f1a444.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <section id="home">
+    <div class="container">
+      <h5>На всю жизнь</h5>
+      <h1><span>Органическая</span> вечность</h1>
+      <p>Качество навсегда</p>
+      <button>Смотреть</button>
+    </div>
+  </section>
+  <br>
+  <section id="brand" class="container">
+    <div class="row g-6 gy-4">
+      <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-38.jpg.webp" alt="">
+      <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-39.jpg.webp" alt="">
+      <img class="img-fluid col-lg-3 col-md-6 col-sm-12"
+        src="./assets/img/1_06c6290b-89fd-4e90-bcca-c2c8dfb9b0fb.jpg.webp" alt="">
+      <img class="img-fluid col-lg-3 col-md-6 col-sm-12"
+        src="./assets/img/2_72426d31-2d1a-4082-94ca-8047d1110f84.jpg.webp" alt="">
+    </div>
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/34a4f1a444.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
