--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/34a4f1a444.js" crossorigin="anonymous"></script>
+  <script></script>
 </body>
 
 </html>
