--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/34a4f1a444.js" crossorigin="anonymous"></script>
-  <script></script>
+  <section id="new" class="w-100">
+    <div class="row p-0 m-0"><
+      <div class="one col-lg-4 col-md-12 col-sm-12 p-0"></div>
+      /div>
+  </section>
 </body>
 
 </html>
