--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       </button>
       <div class="collapse navbar-collapse nav-buttons" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
           <li class="nav-item">
             <a class="nav-link" href="#">Каталог</a>
           </li>
@@ -50,7 +49,7 @@
     </div>
   </nav>
 
-
+  <!-- home -->
   <section id="home">
     <div class="container">
       <h5>На всю жизнь</h5>
@@ -59,26 +58,57 @@
       <button>Смотреть</button>
     </div>
   </section>
-  <br>
+  <br />
+
+  <!-- brand -->
   <section id="brand" class="container">
     <div class="row g-6 gy-4">
-      <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-38.jpg.webp" alt="">
-      <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-39.jpg.webp" alt="">
+      <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-38.jpg.webp" alt="" />
+      <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-39.jpg.webp" alt="" />
       <img class="img-fluid col-lg-3 col-md-6 col-sm-12"
-        src="./assets/img/1_06c6290b-89fd-4e90-bcca-c2c8dfb9b0fb.jpg.webp" alt="">
+        src="./assets/img/1_06c6290b-89fd-4e90-bcca-c2c8dfb9b0fb.jpg.webp" alt="" />
       <img class="img-fluid col-lg-3 col-md-6 col-sm-12"
-        src="./assets/img/2_72426d31-2d1a-4082-94ca-8047d1110f84.jpg.webp" alt="">
+        src="./assets/img/2_72426d31-2d1a-4082-94ca-8047d1110f84.jpg.webp" alt="" />
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/34a4f1a444.js" crossorigin="anonymous"></script>
-  <section id="new" class="w-100">
-    <div class="row p-0 m-0"><
-      <div class="one col-lg-4 col-md-12 col-sm-12 p-0"></div>
-      УРОК 20
-      /div>
+
+  <!-- featured -->
+  <section id="featured" class="my-5 pb-5">
+    <div class="container text-center mt-5 py-5">
+      <h3>Наш выбор</h3>
+      <hr>
+      <p>Только избранные Вами товары </p>
+    </div>
+    <div class="row mx-auto container-fluid">
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/10.png.webp" alt="">
+        <h5 class="p-name">Зимний лёд</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/13.png.webp" alt="">
+        <h5 class="p-name">Весеннее цветение</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/16.png.webp" alt="">
+        <h5 class="p-name">Осенний призыв</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/19.jpg.webp" alt="">
+        <h5 class="p-name">Просто футболка</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+    </div>
   </section>
 </body>
 
