--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="home">
     <div class="container">
       <h5>На всю жизнь</h5>
-      <h1><span>Органическая</span> вечность</h1>
+      <h1><span>Органическаябля</span> вечность</h1>
       <p>Качество навсегда</p>
       <button>Смотреть</button>
     </div>
