--- a/shop.html
+++ b/shop.html
@@ -2,20 +2,38 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>invvi - Органическая одежда</title>
-  <link rel="shortcut icon" href="./assets/img/Group 1.svg" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Каталог</title>
+    <link rel="shortcut icon" href="./assets/img/Group 1.svg" />
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+
+    <style>
+        .product img {
+            width: 100%;
+            height: auto;
+             box-sizing: border-box;
+             object-fit: cover;
+        }
+
+        .pagination a {
+            color: black;
+        }
+
+        .pagination li:hover a {
+            color:#18db0b;
+            background-color:black;
+        }
+    </style>
 </head>
 
 <body>
@@ -49,38 +67,15 @@
       </div>
     </div>
   </nav>
-
-  <!-- home -->
-  <section id="home">
-    <div class="container">
-      <h4>На всю жизнь</h4>
-      <h1><span>Органическая</span> вечность</h1>
-      <p>Качество навсегда</p>
-      <button>Смотреть</button>
-    </div>
-  </section>
-  <br />
-
-  <!-- brand -->
-  <section id="brand" class="container">
-    <div class="row g-6 gy-4">
-      <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-38.jpg.webp" alt="" />
-      <img class="img-fluid col-lg-3 col-md-6 col-sm-12" src="./assets/img/Design_uden_navn-39.jpg.webp" alt="" />
-      <img class="img-fluid col-lg-3 col-md-6 col-sm-12"
-        src="./assets/img/1_06c6290b-89fd-4e90-bcca-c2c8dfb9b0fb.jpg.webp" alt="" />
-      <img class="img-fluid col-lg-3 col-md-6 col-sm-12"
-        src="./assets/img/2_72426d31-2d1a-4082-94ca-8047d1110f84.jpg.webp" alt="" />
-    </div>
-  </section>
-
+  
   <!-- featured -->
-  <section id="featured" class="my-5 pb-5">
-    <div class="container text-center mt-5 py-5">
-      <h3>Наш выбор</h3>
-      <hr class="mx-auto"/>
-      <p>Только избранные Вами товары</p>
+  <section id="featured" class="my-5 py-3">
+    <div class="container mt-5 py-5">
+      <h3>Каталог</h3>
+      <hr/>
+      <p>Всё здесь</p>
     </div>
-    <div class="row mx-auto container-fluid">
+    <div class="row mx-auto container">
       <div class="product text-center col-lg-3 col-md-4 col-sm-12">
         <img class="img-fluid mb-3" src="./assets/img/10.png.webp" alt="" />
         <h5 class="p-name">Зимний лёд</h5>
@@ -105,128 +100,97 @@
         <h4 class="p-price">4000.00 ₽</h4>
         <button class="buy-btn">Купить</button>
       </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/10.png.webp" alt="" />
+        <h5 class="p-name">Зимний лёд</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/13.png.webp" alt="" />
+        <h5 class="p-name">Весеннее цветение</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/16.png.webp" alt="" />
+        <h5 class="p-name">Осенний призыв</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/19.jpg.webp" alt="" />
+        <h5 class="p-name">Просто футболка</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/10.png.webp" alt="" />
+        <h5 class="p-name">Зимний лёд</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/13.png.webp" alt="" />
+        <h5 class="p-name">Весеннее цветение</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/16.png.webp" alt="" />
+        <h5 class="p-name">Осенний призыв</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/19.jpg.webp" alt="" />
+        <h5 class="p-name">Просто футболка</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/10.png.webp" alt="" />
+        <h5 class="p-name">Зимний лёд</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/13.png.webp" alt="" />
+        <h5 class="p-name">Весеннее цветение</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/16.png.webp" alt="" />
+        <h5 class="p-name">Осенний призыв</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+        <img class="img-fluid mb-3" src="./assets/img/19.jpg.webp" alt="" />
+        <h5 class="p-name">Просто футболка</h5>
+        <h4 class="p-price">4000.00 ₽</h4>
+        <button class="buy-btn">Купить</button>
+      </div>
+
+      <nav aria-label="Page navigation example">
+        <ul class="pagination mt-5">
+            <li class="page-item"><a class="page-link" href="#">Назад</a></li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">Вперёд</a></li> 
+        </ul>
+      </nav>
+       
     </div>
   </section>
-
-  <!-- banner -->
-  <section id="banner" class="my-5 py-5">
-    <div class="container">
-      <h4>Зимнее время</h4>
-      <h1>Чтобы было тепло</h1>
-      <button class="text-uppercase">Смотреть</button>
-    </div>
-  </section>
-
-  <!-- clothes -->
-  <section id="featured" class="my-5 ">
-    <div class="container text-center mt-5">
-      <h3>Толстовки и кофты</h3>
-      <hr class="mx-auto"/>
-      <p>Хлопок, чистота, комфорт</p>
-    </div>
-    <div class="row mx-auto container-fluid">
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/clothes1.webp" alt="" />
-        <h5 class="p-name">Зимний лёд</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/clothes2.webp" alt="" />
-        <h5 class="p-name">Весеннее цветение</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/clothes3.webp" alt="" />
-        <h5 class="p-name">Осенний призыв</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/clothes4.jpg" alt="" />
-        <h5 class="p-name">Просто футболка</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-    </div>
-  </section> 
-
-  <!-- shoes -->
-  <section id="featured" class="my-5 ">
-    <div class="container text-center mt-5">
-      <h3>Брюки и джинсы</h3>
-      <hr class="mx-auto"/>
-      <p>Вечность, деним, постоянство</p>
-    </div>
-    <div class="row mx-auto container-fluid">
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/jeans1.webp" alt="" />
-        <h5 class="p-name">Зимний лёд</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/jeans2.webp" alt="" />
-        <h5 class="p-name">Весеннее цветение</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/jeans3.webp" alt="" />
-        <h5 class="p-name">Осенний призыв</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/jeans4.webp" alt="" />
-        <h5 class="p-name">Просто футболка</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-    </div>
-  </section> 
-
-  <!-- accesories -->
-  <section id="featured" class="my-5 ">
-    <div class="container text-center mt-5">
-      <h3>Аксессуары</h3>
-      <hr class="mx-auto"/>
-      <p>Простота, спокойствие, непринуждённость</p>
-    </div>
-    <div class="row mx-auto container-fluid">
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/acc1.webp" alt="" />
-        <h5 class="p-name">Зимний лёд</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/acc2.webp" alt="" />
-        <h5 class="p-name">Весеннее цветение</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/acc3.webp" alt="" />
-        <h5 class="p-name">Осенний призыв</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-        <img class="img-fluid mb-3" src="./assets/img/acc4.webp" alt="" />
-        <h5 class="p-name">Просто футболка</h5>
-        <h4 class="p-price">4000.00 ₽</h4>
-        <button class="buy-btn">Купить</button>
-      </div>
-    </div>
-  </section> 
 
   <!-- footer -->
   <footer class="mt-5 py-5">
     <div class="row justify-content-center container mx-auto pt-5">
       <div class="footer-one col-lg-3 col-md-6 col-sm-12">
-        <img src="./assets/img/Group 1.svg" alt="">
+         <img src="./assets/img/Group 1.svg" alt="">
         <p class="pt-3">Просто мы, просто лучше.</p>
       </div>
       <div class="footer-one col-lg-3 col-md-6 col-sm-12">
@@ -261,10 +225,13 @@
   </footer>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-  <script src="https://kit.fontawesome.com/34a4f1a444.js" crossorigin="anonymous"></script>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/34a4f1a444.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
