--- a/shop.html
+++ b/shop.html
@@ -76,7 +76,7 @@
       <p>Всё здесь</p>
     </div>
     <div class="row mx-auto container">
-      <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+      <div onclick="window.location.href='single_product.html'" class="product text-center col-lg-3 col-md-4 col-sm-12">
         <img class="img-fluid mb-3" src="./assets/img/10.png.webp" alt="" />
         <h5 class="p-name">Зимний лёд</h5>
         <h4 class="p-price">4000.00 ₽</h4>
