--- a/account.html
+++ b/account.html
@@ -85,6 +85,94 @@
     </div>
   </section>
 
+  <!-- orders -->
+  <section class="orders container my-5 py-5">
+    <div class="container mt-5">
+      <h2 class="font-weight-bolde">Заказы</h2>
+      <hr>
+    </div>
+
+    <table class="mt-5 pt-5">
+      <tr>
+        <th>Товар</th>
+        <th>Дата</th>
+      </tr>
+      <tr>
+        <td>
+          <div class="product-info"></div>
+        </td>
+
+        <td>
+
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="product-info">
+            <img src="./assets/img/10.png.webp" alt="">
+            <div>
+              <p>Зимний лёд</p>
+              <small><span>₽</span>4000</small>
+              <br>
+              <a href="#" class="remove-btn">Удалить</a>
+            </div>
+          </div>
+        </td>
+
+        <td>
+          <input type="number" value="1">
+          <a href="#" class="edit-btn">Изменить</a>
+        </td>
+
+        <td>
+          <span>₽</span>
+          <span class="product">4000</span>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="product-info">
+            <img src="./assets/img/10.png.webp" alt="">
+            <div>
+              <p>Зимний лёд</p>
+              <small><span>₽</span>4000</small>
+              <br>
+              <a href="#" class="remove-btn">Удалить</a>
+            </div>
+          </div>
+        </td>
+
+        <td>
+          <input type="number" value="1">
+          <a href="#" class="edit-btn">Изменить</a>
+        </td>
+
+        <td>
+          <span>₽</span>
+          <span class="product">4000</span>
+        </td>
+      </tr>
+    </table>
+
+    <div class="cart-total">
+      <table>
+        <tr>
+          <td>Всего</td>
+          <td>₽ 4000</td>
+        </tr>
+        <tr>
+          <td>Итог</td>
+          <td>₽ 4000</td>
+        </tr>
+      </table>
+    </div>
+
+    <div class="checkout-container">
+      <div class="btn checkout-btn">Оформить</div>
+    </div>
+
+  </section>
+
   <!-- footer -->
   <footer class="mt-5 py-5">
     <div class="row justify-content-center container mx-auto pt-5">
