--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Контакты </a>
+            <a class="nav-link" href="./contact.html">Контакты </a>
           </li>
 
           <li class="nav-item">
-            <i class="fa-solid fa-bag-shopping"></i>
-            <i class="fa-solid fa-user"></i>
+            <a href="./cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+            <a href="./account.html"><i class="fa-solid fa-user"></i></a>
           </li>
         </ul>
       </div>
