--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-      <!-- navbar -->
+  <!-- navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary py-4 fixed-top">
     <div class="container">
       <a href="./index.html"><img src="./assets/img/Group 1.svg" alt="" /></a>
@@ -38,12 +38,12 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Контакты </a>
+            <a class="nav-link" href="./contact.html">Контакты </a>
           </li>
 
           <li class="nav-item">
-            <i class="fa-solid fa-bag-shopping"></i>
-            <i class="fa-solid fa-user"></i>
+            <a href="./cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+            <a href="./account.html"><i class="fa-solid fa-user"></i></a>
           </li>
         </ul>
       </div>
