--- a/single_product.html
+++ b/single_product.html
@@ -20,10 +20,10 @@
 
 <body>
 
-      <!-- navbar -->
+  <!-- navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary py-4 fixed-top">
     <div class="container">
-      <a href="./index.html"><img src="./assets/img/Group 1.svg" alt="" /></a>
+      <a href="./index.php"><img src="./assets/img/Group 1.svg" alt="" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -39,12 +39,12 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Контакты </a>
+            <a class="nav-link" href="./contact.html">Контакты </a>
           </li>
 
           <li class="nav-item">
-            <i class="fa-solid fa-bag-shopping"></i>
-            <i class="fa-solid fa-user"></i>
+            <a href="./cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+            <a href="./account.html"><i class="fa-solid fa-user"></i></a>
           </li>
         </ul>
       </div>
